--- a/buildout.cfg
+++ b/buildout.cfg
@@ -39,6 +39,7 @@ pyramid_formish = git git@github.com:Pylons/pyramid_formish.git
 chameleon = git git@github.com:chrisrossi/chameleon.git
 appendonly = svn svn+ssh://svn.zope.org/repos/main/appendonly/trunk
 external_link_ticket = git git@github.com:karlproject/karl.external_link_ticket.git
+admin5 = git git@github.com:karlproject/admin5.git
 
 [karl]
 recipe = zc.recipe.egg
