Need the box info in the ini file.

--- a/etc/karl.ini
+++ b/etc/karl.ini
@@ -51,6 +51,10 @@ redislog.prefix = karl
 repozitory_db_string = postgresql://karltest:test@localhost:5432/karltest
 pgtextindex.dsn = dbname='karltest' user='karltest' host='localhost' password='test'
 
+# Archive to Box
+box.client_id = hvx2f8d773xwtaffi4da55pf1stthrwx
+box.client_secret = dlTV9e7kdLkcfIpk5nh1pfIhJIJDFh58
+
 [filter:transferlog]
 use = egg:repoze.zodbconn#transferlog
 filename = %(here)s/../log/connection_load_save.csv
