update for latest karl

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,10 +4,20 @@ unzip = true
 parts =
     var
     karl
+    test
 
 index = http://karlhosting.github.io/pyramid/production/index/
 find-links =
     http://karlhosting.github.com/pyramid/staging/
+    https://pypi.python.org/simple/zc.recipe.testrunner/
+    https://pypi.python.org/simple/zope.testrunner/
+    https://pypi.python.org/simple/zope.exceptions/
+    https://pypi.python.org/simple/zope.interface/
+    https://pypi.python.org/simple/six/
+    https://pypi.python.org/simple/repoze.evolution
+    https://pypi.python.org/simple/requests
+    https://pypi.python.org/simple/pyramid
+    https://pypi.python.org/simple/repoze.folder
 
 # override any eggs-directory or download-cache settings
 # that might be in ~/.buildout/default.cfg. We have to do this because
@@ -16,9 +26,6 @@ find-links =
 eggs-directory = ${buildout:directory}/eggs
 download-cache =
 
-customization-packages =
-    osi
-
 [var]
 recipe = z3c.recipe.mkdir
 paths =
@@ -26,8 +33,7 @@ paths =
     var/log
 
 [sources]
-karl = git git@github.com:karlproject/karl.git
-osi = git git@github.com:karlhosting/osi.git
+karl = git git@github.com:wildcardcorp/karl.git
 relstorage = git git@github.com:zodb/relstorage.git
 repoze.catalog = git git@github.com:repoze/repoze.catalog.git
 repoze.pgtextindex = git git@github.com:repoze/repoze.pgtextindex.git
@@ -46,7 +52,6 @@ unzip = true
 dependent-scripts = true
 eggs =
     karl [tests]
-    ${buildout:customization-packages}
     repoze.debug
     repoze.profile
     supervisor
@@ -61,3 +66,8 @@ eggs =
     waitress
 dependent-scripts = true
 interpreter = py
+
+[test]
+recipe = zc.recipe.testrunner
+relative-paths = true
+eggs = ${buildout:eggs}
