--- a/etc/karl.ini
+++ b/etc/karl.ini
@@ -7,10 +7,8 @@ debugtoolbar = false
 postoffice.queue = karl
 connection_stats_filename = %(here)s/../var/log/connection_stats.csv
 connection_stats_threshhold = 0.0
-package = osi
+packages =
 
-box.client_id = uu1e5e1z2rdjwz5ci1srbh5c3fagbdz8
-box.client_secret = OA8tasOkXmXOS6mUSDNtcSmsGJsuAbmP
 statsd_uri = statsd://localhost:8125
 framestats = true
 
@@ -22,21 +20,9 @@ tm.attempts = 5
 debug = true
 jquery_dev_mode = false
 reload_templates = false
-js_devel_mode = false
+resource_devel_mode = false
 static_postfix = static
-# default form file attachment size upload limit
-upload_limit = 0
-min_pw_length = 8
-selectable_groups = group.KarlStaff group.KarlUserAdmin group.KarlAdmin group.KarlCommunications
-aspell_executable = aspell
-aspell_max_words = 5000
-aspell_languages = en
 
-# cutnpasted from karlserve.instance ("per instance" config)
-offline_app_url = karl.example.org
-system_name = KARL
-system_email_domain = example.org
-admin_email = admin@example.org
 error_monitor_subsystems =
                          karl
                          mailin
