pin some versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts =
     karl
     test
 
+versions = versions
 index = http://karlhosting.github.io/pyramid/production/index/
 find-links =
     http://karlhosting.github.com/pyramid/staging/
@@ -71,3 +72,10 @@ interpreter = py
 recipe = zc.recipe.testrunner
 relative-paths = true
 eggs = ${buildout:eggs}
+
+[versions]
+pyramid = 1.2.7
+zope.interface = 4.1.2
+repoze.evolution = 0.6
+repoze.folder = 0.6.3
+Chameleon = 2.22
