various updates to work with latest karl!

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,31 +1,46 @@
 [buildout]
-extensions = mr.developer
+extends =
+    etc/postgresql.cfg
+    etc/versions.cfg
+
+extensions =
+    mr.developer
+
 unzip = true
-parts =
+parts +=
     var
     karl
     test
 
+find-links +=
+    http://karlhosting.github.io/pyramid/production/index/repoze.session
+    http://karlhosting.github.io/pyramid/production/index/formish/
+    http://karlhosting.github.io/pyramid/production/index/pyramid-formish
+    http://karlhosting.github.io/pyramid/production/index/icalendar
+    http://karlhosting.github.io/pyramid/production/index/appendonly
+
 versions = versions
-index = http://karlhosting.github.io/pyramid/production/index/
-find-links =
-    http://karlhosting.github.com/pyramid/staging/
-    https://pypi.python.org/simple/zc.recipe.testrunner/
-    https://pypi.python.org/simple/zope.testrunner/
-    https://pypi.python.org/simple/zope.exceptions/
-    https://pypi.python.org/simple/zope.interface/
-    https://pypi.python.org/simple/six/
-    https://pypi.python.org/simple/repoze.evolution
-    https://pypi.python.org/simple/requests
-    https://pypi.python.org/simple/pyramid
-    https://pypi.python.org/simple/repoze.folder
+auto-checkout =
+    karl
 
 # override any eggs-directory or download-cache settings
 # that might be in ~/.buildout/default.cfg. We have to do this because
 # we're pinning versions using a custom package index instead of
 # using versions.cfg.
 eggs-directory = ${buildout:directory}/eggs
-download-cache =
+
+eggs =
+    karl [tests]
+    repoze.debug
+    repoze.profile
+    RelStorage
+    repoze.pgtextindex
+    repoze.postoffice
+    repozitory
+    pyramid_debugtoolbar
+    waitress
+    pyramid
+    waitress
 
 [var]
 recipe = z3c.recipe.mkdir
@@ -46,36 +61,28 @@ pyramid_formish = git git@github.com:Pylons/pyramid_formish.git
 chameleon = git git@github.com:chrisrossi/chameleon.git
 appendonly = svn svn+ssh://svn.zope.org/repos/main/appendonly/trunk
 external_link_ticket = git git@github.com:karlproject/karl.external_link_ticket.git
+formish = git git@github.com:vangheem/formish.git
+pyramid_formish = git git@github.com:vangheem/pyramid_formish.git  branch=chameleon2
+
+# pypy compat ones
+lxml = git git@github.com:amauryfa/lxml.git branch=cffi
+psycopg2 = git git@github.com:wildcardcorp/psycopg2.git
+
+
+[postgresql]
+recipe = zc.recipe.cmmi
+url = http://ftp.postgresql.org/pub/source/v9.3.4/postgresql-9.3.4.tar.bz2
+md5sum = d0a41f54c377b2d2fab4a003b0dac762
 
 [karl]
 recipe = zc.recipe.egg
 unzip = true
 dependent-scripts = true
-eggs =
-    karl [tests]
-    repoze.debug
-    repoze.profile
-    supervisor
-    superlance
-    guillotine
-    RelStorage
-    repoze.pgtextindex
-    repoze.postoffice
-    repozitory
-    pyramid_debugtoolbar
-    slowlog
-    waitress
-dependent-scripts = true
+eggs = ${buildout:eggs}
 interpreter = py
+
 
 [test]
 recipe = zc.recipe.testrunner
 relative-paths = true
 eggs = ${buildout:eggs}
-
-[versions]
-pyramid = 1.2.7
-zope.interface = 4.1.2
-repoze.evolution = 0.6
-repoze.folder = 0.6.3
-Chameleon = 2.22
