--- a/etc/karl.ini
+++ b/etc/karl.ini
@@ -3,11 +3,12 @@ use = egg:karl
 var = %(here)s/../var
 who_secret = secret
 who_cookie = pnutbtr
-debugtoolbar = false
+debugtoolbar = true
 postoffice.queue = karl
+statistics_folder = %(here)s/../var/stats
 connection_stats_filename = %(here)s/../var/log/connection_stats.csv
 connection_stats_threshhold = 0.0
-packages =
+use_threads_to_send_email = true
 
 statsd_uri = statsd://localhost:8125
 framestats = true
@@ -18,11 +19,11 @@ tm.attempts = 5
 
 # cutnpasted from karlserve.instance python code ("global" config)
 debug = true
-jquery_dev_mode = false
-reload_templates = false
+reload_templates = true
 resource_devel_mode = false
 static_postfix = static
 
+# cutnpasted from karlserve.instance ("per instance" config)
 error_monitor_subsystems =
                          karl
                          mailin
@@ -36,8 +37,8 @@ redislog = false
 redislog.prefix = karl
 
 # cutnpasted from instances.ini (uh.. another "per instance" config)
-repozitory_db_string = postgresql://karltest:test@localhost:5432/karltest
-pgtextindex.dsn = dbname='karltest' user='karltest' host='localhost' password='test'
+repozitory_db_string = postgresql://karltest:test@127.0.0.1:5432/karltest
+pgtextindex.dsn = dbname='karltest' user='karltest' host='127.0.0.1' password='test'
 
 [filter:transferlog]
 use = egg:repoze.zodbconn#transferlog
@@ -56,18 +57,15 @@ path = /__profile__
 
 [pipeline:main]
 pipeline =
-    egg:guillotine#guillotine
     egg:Paste#evalerror
     egg:karl#timeit
     browserid
     karl
 
 [server:main]
-use = egg:Paste#http
+use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
-threadpool_workers = 1
-threadpool_spawn_if_under = 0
 
 [loggers]
 keys = root, karl, osi
