--- a/etc/postgresql.cfg
+++ b/etc/postgresql.cfg
@@ -1,16 +1,10 @@
 [buildout]
-extends = buildout.cfg
-parts +=
+parts =
     postgresql
     postgresqlinit
     psycopg2
-find-links +=
+find-links =
     http://pypi.python.org/simple/iw.recipe.cmd
-
-[karlserve]
-eggs +=
-    RelStorage
-    repoze.pgtextindex
 
 [postgresql]
 recipe = zc.recipe.cmmi
